reviewing doubts and previous failed questions